--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="../src/images/rick-y-morty.png">
+    <link rel="icon" type="image/png" href="https://www.vhv.rs/dpng/d/10-109903_rick-and-morty-png-transparent-png.png">
     <title>Rick and Morty</title>
 </head>
 <body>
